kubernetes/apps/fivefingers/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fivefilters-rss
  namespace: fivefilters-rss
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fivefilters-rss
  template:
    metadata:
      labels:
        app: fivefilters-rss
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      nodeSelector:
        kubernetes.io/hostname: worker-02
      containers:
        - name: fivefilters-rss
          image: heussd/fivefilters-full-text-rss:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: data-volume
              mountPath: /var/www/html/cache/rss
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "200m"
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: fivefilters-rss-data-pvc
